--- a/packages/webui/src/client/ui/RundownView/RundownHeader/_shared.scss
+++ b/packages/webui/src/client/ui/RundownView/RundownHeader/_shared.scss
@@ -20,6 +20,6 @@
 	letter-spacing: 0.01em;
 	text-transform: uppercase;
 	opacity: 1;
-	color: rgba(255, 255, 255, 0.4); // same transparency as `.countdown__digit--dimmed`
+	color: rgba(255, 255, 255, 0.6); // same transparency as `.countdown__digit--dimmed`
 	transition: color 0.2s;
 }
